<resources>
    <string name="app_name">HPCMobile</string>
    <string name="textTest">EDIÇÃO DE TESTE</string>
    <string name="textIMU">IGREJA METODISTA UNIDA</string>
    <string name="textHPCM">HINÁRIO POVO CANTAI MOBILE</string>
    <string name="brevemente">Brevemente</string>
    <string name="acction_continuar">Continuar</string>
    <string name="edicao"><b>Edição Digital</b></string>
    <string name="versao"><b>Versão 1.6</b></string>
    <string name="creditos">Créditos</string>
    <string name="prefacio">Prefácio</string>
    <string name="privacidade">Privacidade</string>
    <string name="abrir">Hinário</string>
    <string name="portugues">Português</string>
    <string name="kikongo">Kikongo</string>
    <string name="umbundo">Umbundo</string>
    <string name="kimbundo">Kimbundo</string>
    <string name="leitura">Leitura Responsiva</string>
    <string name="invocacoes">Invocações e chamadas para adoração</string>
    <string name="santaceia">Ritual da Santa Ceia</string>
    <string name="oracaodominical">Oração Dominical</string>
    <string name="oracaodominical1"><b>Oração Dominical</b></string>
    <string name="credo">Credo Apostólico</string>
    <string name="credo1"><b>Credo Apostólico</b></string>
    <string name="benvindo"><b>Bem vindo</b></string>
    <string name="eventos">Eventos 2020</string>
    <string name="eduardo">E. Cordeiro Alves</string>
    <string name="marcela">Marcela Joaquim de Barros</string>
    <string name="magnos">Magnos Soares Buchartts</string>
    <string name="orlando">Orlando Manuel da Cruz</string>
    <string name="praia">Manuel Praia</string>
    <string name="x"></string>
    <string name="x1"></string>
    <string name="babalueca">BabaluECA</string>
    <string name="arocha">Membro efetivo da IMU António Rocha</string>
    <string name="bethel">Membro efetivo da IMU Bethel</string>
    <string name="calemba">Membro efetivo da IMU Calemba</string>
    <string name="invocacao">Invocações e chamadas para adoração</string>
    <string name="tituloPt">Hinos em Português</string>
    <string name="hpcmobile">HPCMobile</string>
    <string name="procurar">Procurar</string>
    <string name="salmosintro">
        <i>
        \nÓ Senhor Deus, eu te louvarei e cantarei todas as coisas maravilhosas que tens feito.
        \n\nPor causa de ti, eu me alegrarei e ficarei feliz. Cantarei louvores a ti, ó meu Deus altíssimo.
        \n\nSalmos 9:1-2
        </i>
    </string>
    <string name="salmos1"><b>Salmos 1</b></string>
    <string name="salmos1x">
        <b>D - Bem-aventurado o varão que não anda segundo o concelho dos ímpios.</b>
        \nC - Nem se detém no caminho dos pecadores, nem se assenta na roda dos escarnecedores.
        \n<b>D - Antes tem o seu prazer na lei do Senhor,</b>
        \nC - E na sua lei medita de dia e de noite.
        \n<b>D - Pois será como a árvore plantada junto a ribeiro de águas,</b>
        \nC - a qual dá o seu fruto na estação própria,
        \n<b>D - e cujas folhas não caem.</b>
        \nC - e tudo quanto fizer prosperará.
        \n<b>D - Não são assim os ímpios,</b>
        \nC - mas são como a moinha que o vento espalha.
        \n<b>D - Pelo que os ímpios não subsistirão no juízo,</b>
        \nC - nem os pecadores na congregação dos justos.
        \n<b>D - Porque o Senhor conhece o caminho dos justos,</b>
        \nC - mas o caminho dos ímpios perecerá.
    </string>
    <string name="salmos8"><b>Salmos 8</b></string>
    <string name="salmos8x">
        <b>D - Ó Senhor, Senhor nosso, quão admirável é o teu nome em toda a terra!</b>
        \nC - pois puseste a tua glória sobre os céus! Da boca das crianças e dos que mamam,
        \n<b>D - tu suscitaste força, por causa dos teus adversários, </b>
        \nC - para fazeres calar o inimigo e vingativo.
        \n<b>D - Quando vejo os teus céus, obra dos teus dedos,</b>
        \nC - a lua e as estrelas que preparaste,
        \n<b>D - Que é o homem mortal para que te lembres dele?</b>
        \nC - e o filho do homem para que o visites?
        \n<b>D - Contudo, pouco menor o fizeste do que os anjos,</b>
        \nC - e de glória e de honra o coroaste.
        \n<b>D - Fazes com que ele tenha domínio sobre as obras das tuas mãos;</b>
        \nC - tudo puseste debaixo dos seus pés:
        \n<b>D - todas as ovelhas e bois,</b>
        \nC - assim como os animais do campo,
        \n<b>D - As aves dos céus, e os peixes do mar,</b>
        \nC - e tudo o que passa pelas veredas dos mares.
        \n<b>D - Ó Senhor, Senhor nosso,</b>
        \nC - Quão admirável é o teu nome sobre toda a terra!
    </string>
    <string name="salmos15"><b>Salmos 15</b></string>
    <string name="salmos15x">
        <b>D - Senhor, quem habitará no teu tabernáculo?</b>
        \nC - Aquele que anda em sinceridade, e pratica a justiça, e fala verazmente, segundo o seu coração;
        \n<b>D - Aquele que não difama com a sua língua, nem faz mal ao seu próximo,</b>
        \nC - nem aceita nenhuma afronta contra o seu próximo;
        \n<b>D - Aquele a cujos olhos o réprobo é desprezado,</b>
        \nC - mas honra os que temem ao Senhor;
        \n<b>D - Aquele que, mesmo que jure com dano seu, não muda;</b>
        \nC - nem recebe peitas contra o inocente.
        \n<b>D - Quem faz isto,</b>
        \nC - nunca será abalado.
    </string>
    <string name="salmos23"><b>Salmos 23</b></string>
    <string name="salmos23x">
        <b>D - O Senhor é meu pastor;</b>
        \nC - nada me faltará.
        \n<b>D - Deitar-me faz me verdes pastos,</b>
        \nC - guia-me mansamente a águas tranquilas.
        \n<b>D - Refrigera a minha alma;</b>
        \nC - guia-me pelas veredas da justiça, por amor do seu nome.
        \n<b>D - Ainda que eu andasses pelo vale da sombra da morte, não temeria mal algum,</b>
        \nC - Porque tu estás comigo; a tua vara e o teu cajado me consolam.
        \n<b>D - Preparas uma mesa perante mim na presença dos meus inimigos:</b>
        \nC - unges a minha cabeça com óleo, e meu cálice trasborda.
        \n<b>D - Certamente que a bondade e a misericórdia me seguirão todos os dias minha vida,</b>
        \nC - e habitareis na casa do Senhor por longos dias.
    </string>
    <string name="salmos24"><b>Salmos 24</b></string>
    <string name="salmos24x">
        <b>D - Do Senhor é a terra e a sua plenitude;</b>
        \nC - o mundo e aqueles que nele habitam.
        \n<b>D - Porque ele a fundou sobre os mares,</b>
        \nC - e a firmou sobre os rios.
        \n<b>D -Quem subirá ao monte do Senhor?</b>
        \nC - Ou quem estará no seu lugar santo?
        \n<b>D - Aquele que é limpo de mãos e puro de coração;</b>
        \nC - que não entrega a sua alma à vaidade, nem jura enganosamente.
        \n<b>D - Este receberá a bênção do Senhor,</b>
        \nC - e a justiça do Deus da salvação.
        \n<b>D - Levantai, ó portas as vossas Cabeças; levantai-vos, ó entradas eternas!</b>
        \nC - e entrará o Rei da Glória.
        \n<b>D - Quem é este Rei da Glória?</b>
        \nC - O Senhor forte e poderoso, o Senhor poderoso na guerra.
        \n<b>D - Levantai, ó portas, as vossas cabeças; levantai-vos, ó entradas eternas!</b>
        \nC - e entrará o Rei da Glória!
        \n<b>D - Quem é este Rei da Glória?</b>
        \nC - O Senhor dos exércitos; ele é o Rei da Glória!
    </string>
    <string name="salmos46"><b>Salmos 46</b></string>
    <string name="salmos46x">
        <b>D – Deus é o nosso refúgio e fortaleza,</b>
        \nC – socorro bem presente na angústia.
        \n<b>D – Pelo que não temeremos, ainda que a terra se mude,</b>
        \nC – e ainda que os montes se transportem para o meio dos mares;
        \n<b>D – Ainda que as águas rujam e se perturbem,</b>
        \nC – ainda que os montes se abalem pela sua braveza.
        \n<b>D – Há um rio cujas correntes alegram a cidade de Deus,</b>
        \nC – o santuário das moradas do Altíssimo.
        \n<b>D – Deus está no meio dela; não será abalada;</b>
        \nC – Deus a ajudará ao romper da manhã.
        \n<b>D – As nações se embraveceram, os reinos se moveram;</b>
        \nC – Ele levantou a sua voz e a terra se derreteu.
        \n<b>D – O Senhor dos exércitos está connosco;</b>
        \nC – O Deus de Jacob é o nosso refúgio.
        \n<b>D – Vinde, contemplai as obras do Senhor;</b>
        \nC – que desolações têm feito na terra!
        \n<b>D – Ele faz cessar as guerras até ao fim da terra;</b>
        \nC – quebra o arco e corta a lança; queima os carros no fogo!
        \n<b>D – Aquietai-vos, e sabei que eu sou Deus,</b>
        \nC – serei exaltado entre as nações, serei exaltado sobre a terra.
        \n<b>D – O Senhor dos exércitos está connosco;</b>
        \nC – o Deus de Jacob é o nosso refúgio.
    </string>
    <string name="salmos67"><b>Salmos 67</b></string>
    <string name="salmos67x">
        <b>D - Deus tenha misericórdia de nós e nos abençoe, </b>
        \nC - e faça resplandecer o seu rosto sobre nós.
        \n<b>D - Para que se conheça na terra o teu caminho,</b>
        \nC - e em todas as nações a tua salvação.
        \n<b>D - Louvem-te a ti, ó Deus, os povos;</b>
        \nC - Louvem-te os povos todos!
        \n<b>D - Alegrem-se e regozijem-se as nações,</b>
        \nC - pois julgarás os povos com equidade, e governarás as Nações sobre a terra.
        \n<b>D - Louvem-te a ti, ó Deus, os povos;</b>
        \nC - Louvem-te os povos todos!
        \n<b>D - Então a terra dará o seu fruto;</b>
        \nC - e Deus, o nosso Deus, nos abençoará.
        \n<b>D - Deus nos abençoará,</b>
        \nC - e todas as extremidades da terra o temerão.
    </string>
    <string name="salmos72"><b>Salmos 72</b></string>
    <string name="oracaointro">
        Para uma melhor leitura, disponibilizamos a <b>Oração do pai nosso</b> nos quatro idiomas disponíveis no HPC
    </string>
    <string name="alertaTitulo"><b>Ajude-nos a melhorar</b></string>
    <string name="alertaMensagem">
        O <b>HPCMobile</b> é grátis, manter a app e suas atualizações
        têm custos.
        \n
        \nPara ajudar-nos, basta fazer-nos uma doação.
        \n
        \n<b>Você não é obrigado a fazer isso</b>, apenas ajude quem está melhorando
        e mantendo o <b>HPCMobile</b> simples e atual para você.
        \n
        \nA Equipe <b>HPCMobile</b> agradece.
    </string>
    <string name="email">tanamoda1@gmail.com</string>
    <string name="whatsapp">+351 934 785 888</string>
    <string name="configuracoes">Configurações</string>
    <string name="darkMode">Ativar/Desativar modo escuro</string>
    <string name="fechar">Fechar</string>
    <string name="feliz01">20 de Janeiro
        \ndia da criança Metodista
    </string>
    <string name="criancaMensagen">
        Deixai vir a mim as crianças, porque delas é o reino dos céus
        \nMateus 19:14
        \n
        \nVamos Proteger, Amar e Instruir as crianças segundo os objetivos
        que temos para elas, assim, mesmo com o passar do tempo ela não se desviará deles.
    </string>
</resources>