<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="200sp"
            android:layout_height="280sp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hpcmobile"
            android:layout_gravity="center"
            android:textSize="45sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/ColorTextTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHPCM"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/ColorTextTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versao"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/ColorTextTitle"/>

    </LinearLayout>

</RelativeLayout>