<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracaoActivity">

    <RelativeLayout
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:textColor="@color/ColorTextTitle"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="12sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_light_bg"
        app:cardCornerRadius="10sp"
        app:cardElevation="6sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6sp">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="12sp"
                android:text="@string/email"
                android:textColor="@color/cardTexColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="60sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6sp">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/ic_whatsapp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="12sp"
                android:text="@string/whatsapp"
                android:textColor="@color/cardTexColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="120sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6sp">

             <Switch
                android:id="@+id/darkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/darkMode"
                android:layout_weight="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>