<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300sp"
    android:layout_height="450sp"
    android:background="@color/alertBackground"
    android:padding="5sp"
    android:layout_gravity="center">

    <!--<TextView
        android:id="@+id/txtFechar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/colorBackgroundCardText"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circulo_background"/>
        -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_money_donation"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertaTitulo"
            android:textColor="@color/colorBackgroundCardText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertaMensagem"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/colorBackgroundCardText"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechar"
        android:layout_marginTop="15sp"
        android:layout_gravity="center"
        android:background="@drawable/canto_arrendondado"
        android:textColor="@color/colorBackgroundCardText"/>
</LinearLayout>